# can-py

./: .gitignore  README.md  ROADMAP.md  can_capture.py  can_parser.py  config.py  detect_devices.py  output_writer.py  pyproject.toml  requirements.txt
canpy/: __init__.py  capture.py  parser.py
canpy/writers/: __init__.py  base.py  streaming_writer.py
src/canpy/: __init__.py  capture.py
src/canpy/config/: defaults.yaml  manager.py
src/canpy/storage/: __init__.py  csv_repository.py  frame.py  query.py  repository.py
src/canpy/writers/: __init__.py  base.py  csv_writer.py  example_writer.py  json_writer.py  registry.py  streaming_writer.py
tests/capture/: test_capture_modes.py
tests/config/: test_manager_integration.py
tests/storage/: test_csv_repository.py  test_frame.py  test_public_exports.py  test_query.py  test_repository.py
tests/writers/: test_implementation.py  test_phase4_extensibility.py  test_registry.py
