[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canpy"
version = "0.1.0"
description = "CAN data capture and streaming library for EV testing"
requires-python = ">=3.8"
dependencies = [
    "python-can>=4.0.0",
    "cantools>=4.5.0",
    "pyserial>=3.5",
    "cantact>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]